# deribit_trial

./: .gitignore  CMakeLists.txt
config/: config.json.example
include/: authentication.hpp  config.hpp  logger.hpp  market_data.hpp  order_manager.hpp  performance_metrics.hpp  websocket_server.hpp
src/: authentication.cpp  logger.cpp  main.cpp  market_data.cpp  order_manager.cpp  performance_metrics.cpp  websocket_server.cpp
tests/: websocket_client_test.cpp
